2021-06-20  Sam Weinig  <weinig@apple.com>

        Replace Span implementation with one from libc++, which is more spec complient
        https://bugs.webkit.org/show_bug.cgi?id=227197

        Reviewed by Darin Adler.

        * wtf/Span.h:
        The tcb span implementation had some SFINAE issues when converting containers
        had data() and size() member functions but were not span compatible that were
        causing failures. Rather than trying to fix those, this adopts a modified version
        of the libc++ span implementation which is more up-to-date.

        To fix MSVC compile issues, the as_bytes/as_writable_bytes functions have been
        re-implemented to not work around a compile issue seen where using the dynamic_extent
        specicialization from the static extent specicialization was failing to compile.

2021-06-20  Wenson Hsieh  <wenson_hsieh@apple.com>

        [macOS] Rename WKVisualSearchPreviewController to WKQuickLookPreviewController
        https://bugs.webkit.org/show_bug.cgi?id=227193

        Reviewed by Sam Weinig.

        Add some compile-time flags to guard QuickLook SPI declarations.

        * wtf/PlatformHave.h:

2021-06-20  Sam Weinig  <weinig@apple.com>

        Adopt Span in SHA1.h
        https://bugs.webkit.org/show_bug.cgi?id=227184

        Reviewed by Chris Dumez.

        Replaces overload of addBytes taking a Vector with ones taking
        a Span and add overloads for Span<const std::byte> which all the
        others are now implemented in terms of. This is useful since
        any Span can be turned into one of type Span<const std::byte>
        just by calling asBytes(existingSpan).

        This leaves most of the existing overloads in place (though
        simplifies them by implementing them as Span contructions),
        though we should consider removing some in a separate pass.

        * wtf/SHA1.cpp:
        * wtf/SHA1.h:

2021-06-19  Sam Weinig  <weinig@apple.com>

        Adopt Span in Base64.h